Converted 'site' to always take full domain name Vignette complete Still throttles oddly now and then some tag & badge functionality seems to only return 1 result

--- a/inst/doc/RStackExchange.Rnw
+++ b/inst/doc/RStackExchange.Rnw
@@ -71,11 +71,13 @@ use a private algorithm to identify similar questions as well as
 in other questions.
 
 <<questions>>=
+   library(RStackExchange)
    allQs <- getQuestions(tagged='r', fromDate=as.POSIXct('2010-10-01'),
                          toDate=as.POSIXct('2011-01-01'), num=5)
-
-   noAQs <- getQuestions(tagged='r', fromDate=as.POSIXct('2010-10-01'),
-                         toDate=as.POSIXct('2011-01-01'), num=5)
+   allQs
+   noAQs <- getNoAnswerQuestions(tagged='r', fromDate=as.POSIXct('2010-10-01'),
+                                 toDate=as.POSIXct('2011-01-01'), num=5)
+   noAQs
 @ 
 
 These questions are all instances of the \Rclass{seQuestion} class,
@@ -83,8 +85,8 @@ which provides the \Rclass{answers} field already included.  We can
 see the number of answers each provides:
 
 <<answers>>=
-  aQAnswers <- allQs$getAnswers()
-  nAQAnswers <- noAQs$getAnswers()
+  aQAnswers <- sapply(allQs, function(x) x$getAnswers())
+  nAQAnswers <- sapply(noAQs, function(x) x$getAnswers())
  
   length(aQAnswers)
   length(nAQAnswers)
@@ -93,13 +95,84 @@ see the number of answers each provides:
 One can also see the comments for either a question or an answer:
 
 <<comments>>=
-  allQs$getComments()
-  aQAnswers[[1]]$getComments()
+  allQs[[1]]$getComments()
+
+  allComments <- sapply(allQs, function(x) x$getComments())
+  allComments[[1]]
 @ 
 
 \section{Users}
 
-\section{Badges and Tags}
+At the moment, finding users is a task that's split between two
+functions.  The \Rfunction{searchusers} function is intended for cases where
+one does not know the specific users, while \Rfunction{getUsers} will
+return users specified by their user IDs.  
+
+In general, there should be little use for \Rfunction{getUsers}, as
+most situations where one will have actual user IDs (e.g. the asker of
+a question), the \Rclass{seUser} object will already be attached to
+that object (using the same example, the \Rclass{seQuestion} object).
+
+In this example, we'll find the 15 oldest users with the word 'java'
+as part of their name, and then identify which one has the highest reputation.
+
+<<searchUsers>>=
+   users <- searchUsers(num=15, filter='java', sort='creation', order='asc')
+   reps <- sapply(users, function(x) x$getReputation())
+   maxRepUser <- users[[which.max(reps)]]
+   maxRepUser$getDisplayName()
+@ 
+
+\section{Tags}
+
+Tags are a method of aggregating content by topic.  A question may
+have any number of tags applied to it, which allows the question to
+not have to live under one single organizational layer.  For example,
+a question might be tagged as pertaining to {\em R} as well as 
+{\em time-series}.  
+
+Tags are not as richly supported by the StackExchange API, but one can
+still manipulate them a bit.  For instance, we can see who the top
+question askers are for the {\em javascript} tag:
+
+<<Javascript>>=
+   tag <- getTags(num=1, filter='javascript')[[1]]
+   tag$topAskers('month')
+@ 
+
+Or given a user, we can see what tags they like to work with, first
+looking at the top 5 tags that they tend to answer questions about as
+well as ask questions about.
+
+<<userTags>>=
+   ansTags <- maxRepUser$topTagsByAnswers(num=10)
+   ansTags
+   quesTags <- maxRepUser$topTagsByQuestions(num=10)
+   quesTags
+@ 
+
+Similarly, given a particular tag (or vector of tags), we can see what the top rated
+questions or answers are for that user.
+
+<<userTags2>>=
+   maxRepUser$topAnswersByTags(ansTags[[1]]$getName(), num=3)
+   maxRepUser$topQuestionsByTags(quesTags[[1]]$getName(), num=2) 
+@
+
+
+\section{Badges}
+
+Badges are a current trend in websites which theoretically gives users
+more motivation to participate, using a system of video game like
+rewards.  We can get a list of the badges available on a given
+StackExchange site, and see what users have been awarded this badge,
+for example:
+
+<<badges>>=
+   badges <- allBadges(num=300, site='programmers.stackexchange.com')
+   badgeRecipients(badges[[25]]$getBadgeID(), num=5)
+@ 
+
 
 \section{API Keys}
 
