--- a/inst/doc/RStackExchange.Rnw
+++ b/inst/doc/RStackExchange.Rnw
@@ -29,11 +29,10 @@ best answers to the best questions floating to the top.
 \section{Initial Notes}
 
 \subsection{Notes for this version}
-This package is still very much a work in progress, and one will find that 
-the piles of dust in the corners are quite high, and that the roughness of 
-the edges are very noticeable.  However, the functionality is working for some 
-definition of the term, and I thought it might be useful for other people 
-than sitting in my code repository waiting for me to finish it up.
+
+This package is still very much a work in progress, the edges are still
+quite rough.  If a particular rough edge interests you and you'd like
+it smoothed out sooner rather than later, please contact me.
 
 \subsection{Notes on API coverage}
 
@@ -47,17 +46,35 @@ please contact me.
 This document is just attempting to point you in the right direction, and
 is not providing an encyclopedic overview of the \Rpackage{RStackExchange}
 package nor the StackExchange API.  Refer to the individual man pages for
-the package to see a complete overview of functionality.
+the package to see a complete overview of functionality.  For more complete 
+documentation of the StackExchange API see 
+\url{http://api.stackoverflow.com/1.0/usage}.
 
 \section{Managing multiple StackExchange sites}
 
 Any valid StackExchange site will work with this package.  All functions take
 a \Rfunarg{site} argument, which defaults to \Robject{stackoverflow.com}. 
 You may override this default by supplying the domain
-name (NOT the full URL) for the StackExchange site that you wish to use.
-
-A complete list of StackExchange sites is available at 
+name (NOT the full URL) for the StackExchange site that you wish to use. A 
+complete list of StackExchange sites is available at 
 \url{http://stackexchange.com/sites}.
+
+\section{API Keys}
+
+By default, access to the StackExchange API is considered to be more of a trial
+basis affair, and a particular IP address can only make 300 requests per day
+in that manner.  Considering that a large query could result in dozens of
+API requests, this limit won't take you very far.  There's a solution to this
+problem, obtaining a StackExchange API Key.  To do this, you will create a
+dummy application at \url{http://stackapps.com/apps/register}, and at the
+end you'll be given an API Key.  By using this key, you can up your limit
+to be 10,000 requests per day.  To enable the key in your R session, do
+the following, where \Robject{key} is what was given to you:
+
+<<APIKEY,eval=FALSE>>=
+registerAPIKey(key)
+@ 
+
 
 \section{You've got questions?  We've got answers}
 
@@ -173,22 +190,6 @@ for example:
    badgeRecipients(badges[[25]]$getBadgeID(), num=5)
 @ 
 
-
-\section{API Keys}
-
-By default, access to the StackExchange API is considered to be more of a trial
-basis affair, and a particular IP address can only make 300 requests per day
-in that manner.  Considering that a large query could result in dozens of
-API requests, this limit won't take you very far.  There's a solution to this
-problem, obtaining a StackExchange API Key.  To do this, you will create a
-dummy application at \url{http://stackapps.com/apps/register}, and at the
-end you'll be given an API Key.  By using this key, you can up your limit
-to be 10,000 requests per day.  To enable the key in your R session, do
-the following, where \Robject{key} is what was given to you:
-
-<<APIKEY,eval=FALSE>>=
-registerAPIKey(key)
-@ 
 
 \section{Session Information}
 
